--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <li><strong>Duration</strong>: Jan 2021 – June 2024</li>
                         </ul>
                     </div>
-                    <span class="timeline-logo"><img src="karnataka-logo.png" alt="SSC"></span>
+                    <!-- <span class="timeline-logo"><img src="karnataka-logo.png" alt="SSC"></span> -->
                 </article>
 
                 <!-- Item 2 - 12th -->
@@ -208,7 +208,7 @@
                             <li><strong>Duration</strong>: June 2018 – June 2020</li>
                         </ul>
                     </div>
-                    <span class="timeline-logo"><img src="diamond-logo.png" alt="HSC"></span>
+                    <!-- <span class="timeline-logo"><img src="diamond-logo.png" alt="HSC"></span> -->
                 </article>
 
                 <!-- Item 3 - BTech -->
@@ -224,7 +224,7 @@
                             <li><strong>Duration</strong>: June 2017 – June 2018</li>
                         </ul>
                     </div>
-                    <span class="timeline-logo"><img src="dbatu-logo.png" alt="Degree"></span>
+                    <!-- <span class="timeline-logo"><img src="dbatu-logo.png" alt="Degree"></span> -->
                 </article>
 
             </div>
