--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 <span class="logo-text">Shweta || Software Engineer</span>
             </div>
             <ul class="nav-links">
-                <li><a href="about.html">About</a></li>
-               <li> <a href="projects.html">Projects</a></li>
+                <li><a href="#about">About</a></li>
                 
-               
-                <li> <a href="education.html">Education</a></li>
-                <li><Contact href="contact.html">Contact</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li></li>
             </ul>
         </div>
     </nav>
