--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
         </div>
     </section>
 
-    <!-- Scroll Indicator -->
-    <div class="scroll-indicator">
+    Scroll Indicator
+    <!-- <div class="scroll-indicator">
         <div class="scroll-circle">
             <div class="scroll-dot"></div>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
